--- a/mandelbulber2/formula/ui/amazing_ifs.ui
+++ b/mandelbulber2/formula/ui/amazing_ifs.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>amazing_ifs</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>916</width>
-    <height>3132</height>
+    <height>3888</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -87,14 +87,14 @@
         <item row="1" column="0">
          <widget class="QLabel" name="label_262">
           <property name="text">
-           <string>Start at iteration:</string>
+           <string>start at iteration:</string>
           </property>
          </widget>
         </item>
         <item row="1" column="2">
          <widget class="QLabel" name="label_265">
           <property name="text">
-           <string>Stop at iteration:</string>
+           <string>stop at iteration:</string>
           </property>
          </widget>
         </item>
@@ -176,7 +176,7 @@
         <item row="1" column="0" rowspan="5">
          <widget class="QLabel" name="label_46">
           <property name="text">
-           <string notr="true">Reverse
+           <string notr="true">reverse
 offset</string>
           </property>
          </widget>
@@ -304,7 +304,7 @@ offset</string>
         <item row="1" column="0">
          <widget class="QLabel" name="label_23">
           <property name="text">
-           <string>InvertR2:</string>
+           <string>invertRR:</string>
           </property>
          </widget>
         </item>
@@ -423,7 +423,7 @@ offset</string>
         <item row="0" column="0" rowspan="3">
          <widget class="QLabel" name="label_259">
           <property name="text">
-           <string>Post
+           <string>post
 offset:</string>
           </property>
          </widget>
@@ -463,7 +463,7 @@ offset:</string>
         <item row="1" column="0">
          <widget class="QLabel" name="label_24">
           <property name="text">
-           <string>Scale:</string>
+           <string>scale:</string>
           </property>
          </widget>
         </item>
@@ -623,7 +623,7 @@ offset:</string>
      <item row="1" column="0">
       <widget class="QLabel" name="label_120">
        <property name="text">
-        <string>Offset1:</string>
+        <string>offset1:</string>
        </property>
       </widget>
      </item>
@@ -734,14 +734,14 @@ offset:</string>
         <item row="1" column="0">
          <widget class="QLabel" name="label_267">
           <property name="text">
-           <string>Start at iteration:</string>
+           <string>start at iteration:</string>
           </property>
          </widget>
         </item>
         <item row="1" column="2">
          <widget class="QLabel" name="label_268">
           <property name="text">
-           <string>Stop at iteration:</string>
+           <string>stop at iteration:</string>
           </property>
          </widget>
         </item>
@@ -792,7 +792,7 @@ offset:</string>
      <item row="2" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledCz_false">
        <property name="text">
-        <string notr="true">Fold z:</string>
+        <string notr="true">fold z:</string>
        </property>
       </widget>
      </item>
@@ -880,14 +880,14 @@ offset:</string>
      <item row="1" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledCy">
        <property name="text">
-        <string notr="true">Fold y:</string>
+        <string notr="true">fold y:</string>
        </property>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledCx">
        <property name="text">
-        <string notr="true">Fold x:</string>
+        <string notr="true">fold x:</string>
        </property>
       </widget>
      </item>
@@ -1006,7 +1006,7 @@ offset:</string>
      <item row="2" column="1">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledBz_false">
        <property name="text">
-        <string notr="true">y</string>
+        <string notr="true">z</string>
        </property>
       </widget>
      </item>
@@ -1027,7 +1027,7 @@ offset:</string>
      <item row="1" column="0">
       <widget class="QLabel" name="label_128">
        <property name="text">
-        <string>Offset2:</string>
+        <string>offset2:</string>
        </property>
       </widget>
      </item>
@@ -1269,14 +1269,14 @@ offset:</string>
         <item row="1" column="0">
          <widget class="QLabel" name="label_263">
           <property name="text">
-           <string>Start at iteration:</string>
+           <string>start at iteration:</string>
           </property>
          </widget>
         </item>
         <item row="1" column="2">
          <widget class="QLabel" name="label_266">
           <property name="text">
-           <string>Stop at iteration:</string>
+           <string>stop at iteration:</string>
           </property>
          </widget>
         </item>
@@ -1323,7 +1323,7 @@ offset:</string>
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_1">
+         <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_2">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
@@ -1353,7 +1353,7 @@ offset:</string>
         <item row="1" column="0">
          <widget class="QLabel" name="label_8">
           <property name="text">
-           <string>Scale:</string>
+           <string>scale:</string>
           </property>
          </widget>
         </item>
@@ -1447,14 +1447,14 @@ offset:</string>
            <item row="2" column="0">
             <widget class="QLabel" name="label_150">
              <property name="text">
-              <string>Vary offset:</string>
+              <string>vary offset:</string>
              </property>
             </widget>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_145">
              <property name="text">
-              <string>Scale VaryA:</string>
+              <string>scale VaryA:</string>
              </property>
             </widget>
            </item>
@@ -1633,7 +1633,7 @@ offset:</string>
         <item row="2" column="0" rowspan="2">
          <widget class="QLabel" name="label_264">
           <property name="text">
-           <string>Start at iteration:</string>
+           <string>start at iteration:</string>
           </property>
          </widget>
         </item>
@@ -1653,7 +1653,7 @@ offset:</string>
         <item row="2" column="2" rowspan="2">
          <widget class="QLabel" name="label_269">
           <property name="text">
-           <string>Stop at iteration:</string>
+           <string>stop at iteration:</string>
           </property>
          </widget>
         </item>
